--- a/css/less/style.less
+++ b/css/less/style.less
@@ -206,4 +206,17 @@ body {
     z-index:9999;
     color:white;
   }
+
+  .user-name {
+    float: left;
+  }
+
+  .episode-wrapper {
+    .image-wrapper {
+      img {
+        width: 100%;
+        height: auto;
+      }
+    }
+  }
 }
