--- a/views/episode.html
+++ b/views/episode.html
@@ -1,16 +1,18 @@
-<div class="container">
-    <p>{{episode}}</p>
+<div class="container episode-wrapper">
    <h1>{{ episode.Name }}</h1>
-    <img ng-src="{{ episode.EpisodeImage }}"/>
-    <p>Show: <a href="#show/{{show.ImdbID}}">{{show.Name}}</a></p>
-    <a href="#show/{{ episode.ShowImdbId }}"></a>
-    <p> Description: {{episode.Description}}</p>
-    <p> Season: {{episode.SeasonNr}}</p>
-    <p> Episode: {{episode.EpisodeNr }}</p>
-    <p>Rating{{episode.Rating}}</p>
-    <p>IMDB : {{episode.ShowImdbId}}</p>
-    <p>Date : {{episode.Date | date:'yyyy-MM-dd'}}</p>
-
+    <div class="col-md-6 image-wrapper">
+        <img ng-src="{{ episode.EpisodeImage }}"/>
+    </div>
+    <div class="col-md-6">
+        <p>Show: <a href="#show/{{show.ImdbID}}">{{show.Name}}</a></p>
+        <a href="#show/{{ episode.ShowImdbId }}"></a>
+        <p> Season: {{episode.SeasonNr}}</p>
+        <p> Episode: {{episode.EpisodeNr }}</p>
+        <p>Rating: {{episode.Rating}}</p>
+        <p>IMDB : {{episode.ShowImdbId}}</p>
+        <p>Date : {{episode.Date | date:'yyyy-MM-dd'}}</p>
+        <p> Description: {{episode.Description}}</p>
+    </div>
     <div class="bottom-menu">
         <button class="btn btn-fab btn-raised btn-material-red" ng-click="editShow()"><i
                 class="mdi-image-edit button-lg-icon"></i></button>
