--- a/css/less/style.less
+++ b/css/less/style.less
@@ -135,7 +135,7 @@ body {
     bottom: 30px;
     right: 30px;
     width: 50px;
-    .small{
+    .small {
       margin: 5px;
     }
   }
@@ -180,9 +180,20 @@ body {
   }
 
   .season-wrapper {
+    .show-wrapper {
+      margin: 10px 20px;
+      color: #000000;
+      .name {
+        a {
+          font-size: 35px;
+        }
+      }
+
+      .season {
+        font-size: 25px;
+      }
+    }
     .tile {
-      -webkit-animation: fadeinblock 2s;
-      -moz-animation: fadeinblock 2s;
       .checkbox {
         margin: 7px;
         margin-bottom: 12px;
@@ -258,7 +269,6 @@ body {
   }
 }
 
-
 @-webkit-keyframes labels {
   0% {
     margin-top: 0px;
@@ -267,6 +277,7 @@ body {
     margin-top: -15px;
   }
 }
+
 @-webkit-keyframes fadeinblock {
   0%,
   30% {
