--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -5,8 +5,8 @@
         <div class="checkbox">
             <p>Season Watched:</p>
             <label>
-                <input type="checkbox" ng-checked="isThisUserEpisode(episode.EpisodeId)"
-                       ng-click="seasonWatched()">
+                <input type="checkbox" ng-checked="isSeasonWatched()"
+                       ng-click="seasonWatched()" >
             </label>
         </div>
     </div>
