--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1,19 +1,26 @@
 body {
+  overflow-x:hidden;
+  font-family: 'Roboto', sans-serif;
   .container {
     width: 940px;
     margin-bottom: 30px;
   }
   .content {
-    margin-top: 20px;
     color: #000000;
   }
   .header-panel {
+    h2 {
+      float: left;
+    }
     color: #ffffff;
     height: 120px;
     background-color: #212121;
-    .log-in {
-      font-size: 18px;
-      margin: 15px;
+    .button-wrapper {
+      margin: 12px;
+      .log-in {
+        font-size: 18px;
+        margin: 15px;
+      }
     }
   }
 
@@ -85,7 +92,6 @@ body {
     }
   }
   .show-wrapper {
-
     .show {
       .img-wrapper {
         img {
@@ -143,11 +149,22 @@ body {
   .button-lg-icon {
     top: 0 !important;
   }
-  .login-wrapper {
+  .login {
     text-align: center;
-    input {
+    .login-wrapper {
+      background: #FFFFFF;
+      margin: 0;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      color: #000000;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+      input {
+      }
     }
   }
+
 
   .my-shows {
     img {
@@ -221,6 +238,49 @@ body {
       }
     }
   }
+  .welcome {
+    text-align: center;
+    .welcome-wrapper {
+      margin: 0;
+      position: absolute;
+      top: 38%;
+      color: #FFFFFF;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+      h1 {
+        font-size: 55px;
+      }
+      p {
+        font-size: 30px;
+        text-align: left;
+      }
+      .log-in {
+        padding: 3px 10px;
+        font-size: 23px;
+      }
+    }
+  }
+
+  .background {
+    width: 100%;
+    .background-wrapper {
+      .upper {
+        background: url("../files/image/hoc.jpg");
+        background-size: 100%;
+        width: 100%;
+
+      }
+      .lower {
+        background: url("../files/image/background-collage.jpg");
+        background-size: 97%;
+        -webkit-filter: blur(8px) brightness(0.8);
+        height: 100%;
+        background-repeat: no-repeat;
+        margin: -32px 0px 0px -14px;
+        width: 105%;
+      }
+    }
+  }
 }
 
 .shows-data {
@@ -287,3 +347,27 @@ body {
     opacity: 1;
   }
 }
+
+.container-full {
+  margin: 0 auto;
+  width: 100%;
+}
+/*
+
+body{
+  .bg-wrapper {
+    height: 100%;
+    background-repeat: no-repeat;
+  }
+  &.register {
+    .bg-wrapper {
+      background: url("../files/image/background-collage.jpg");
+    }
+  }
+
+  &.log-in {
+    .bg-wrapper {
+      background: url("../files/image/bb.jpg");
+    }
+  }
+}*/
