--- a/views/log-in.html
+++ b/views/log-in.html
@@ -1,5 +1,5 @@
-<div class="container">
-    <div class="login-wrapper col-md-4 col-md-offset-4">
+<div class="container login">
+    <div class="login-wrapper col-md-2 col-md-offset-5">
         <h1>Log In !</h1>
 
         <form class="login-form">
