--- a/views/register.html
+++ b/views/register.html
@@ -1,21 +1,26 @@
-<div class="container">
-    <div class="register-wrapper col-md-4 col-md-offset-4">
-        <h1>Register !</h1>
-        <form class="register-form">
-            <div class="form-group">
-                <input type="text" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control floating-label" data-ng-model="user.Password" id="inputPassword" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control floating-label" data-ng-model="user.ConfirmPassword" id="inputPasswordConfirm" placeholder="Confirm Password">
-            </div>
-            <div class="form-group">
-                <div class="col-lg-10 col-lg-offset-2">
-                    <button type="submit" class="btn btn-primary" ng-click="register(user)">Log in</button>
+
+    <div class="container">
+        <div class="register-wrapper col-md-4 col-md-offset-4">
+            <h1>Register !</h1>
+
+            <form class="register-form">
+                <div class="form-group">
+                    <input type="text" class="form-control floating-label" data-ng-model="user.Email" id="inputEmail"
+                           placeholder="Email">
                 </div>
-            </div>
-        </form>
-    </div>
+                <div class="form-group">
+                    <input type="password" class="form-control floating-label" data-ng-model="user.Password"
+                           id="inputPassword" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control floating-label" data-ng-model="user.ConfirmPassword"
+                           id="inputPasswordConfirm" placeholder="Confirm Password">
+                </div>
+                <div class="form-group">
+                    <div class="col-lg-10 col-lg-offset-2">
+                        <button type="submit" class="btn btn-primary" ng-click="register(user)">Log in</button>
+                    </div>
+                </div>
+            </form>
+        </div>
 </div>
