--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,3 +1,16 @@
-<div class="container">
-    <h2>Welcome to SimpleShow !</h2>
+<div class="background">
+    <div class="background-wrapper">
+        <div class="upper">
+        </div>
+        <div class="lower">
+        </div>
+    </div>
+</div>
+<div class="container welcome">
+    <div class="welcome-wrapper">
+        <h1>Welcome to SimpleShow !</h1>
+        <p>Track you're favorite TV shows</p>
+        <a href="#register" class="btn btn-primary navbar-btn pull-left">Sign Up</a>
+        <a href="#log-in" class="pull-left navbar-btn log-in">Log In</a>
+    </div>
 </div>
