--- a/views/log-in.html
+++ b/views/log-in.html
@@ -10,7 +10,7 @@
                 <input type="password" class="form-control floating-label" data-ng-model="user.password" id="inputPassword" placeholder="Password">
             </div>
             <div class="form-group">
-                <div class="col-lg-10 col-lg-offset-2">
+                <div class="submit">
                     <button type="submit" class="btn btn-primary" ng-click="logIn(user)">Log in</button>
                 </div>
             </div>
