--- a/views/register.html
+++ b/views/register.html
@@ -1,6 +1,6 @@
 
     <div class="container">
-        <div class="register-wrapper col-md-4 col-md-offset-4">
+        <div class="register-wrapper col-md-2 col-md-offset-5">
             <h1>Register !</h1>
 
             <form class="register-form">
@@ -17,7 +17,7 @@
                            id="inputPasswordConfirm" placeholder="Confirm Password">
                 </div>
                 <div class="form-group">
-                    <div class="col-lg-10 col-lg-offset-2">
+                    <div class="submit">
                         <button type="submit" class="btn btn-primary" ng-click="register(user)">Log in</button>
                     </div>
                 </div>
