--- a/views/showSeason.html
+++ b/views/showSeason.html
@@ -13,7 +13,8 @@
     <div class="col-md-4 wrapper tile" ng-repeat="episode in episodes">
         <div class="tile-wrapper">
             <div class="image-wrapper">
-                <p class="name">{{episode.EpisodeNr}}x{{episode.SeasonNr}} {{ episode.Name }}</p>
+                {{episode}}
+                <p class="name">{{episode.EpisodeNr}}x{{episode.SeasonNr}} <a href="#show/{{ show.ImdbID}}/{{ episode.SeasonNr }}/{{ episode.EpImdbId}}"> {{ episode.Name }}</a></p>
                 <img ng-src="{{episode.EpisodeImage}}"/>
             </div>
             <div class="checkbox">
