--- a/css/less/style.less
+++ b/css/less/style.less
@@ -1,5 +1,5 @@
 body {
-  overflow-x:hidden;
+  overflow-x: hidden;
   font-family: 'Roboto', sans-serif;
   .container {
     width: 940px;
@@ -9,9 +9,6 @@ body {
     color: #000000;
   }
   .header-panel {
-    h2 {
-      float: left;
-    }
     color: #ffffff;
     height: 120px;
     background-color: #212121;
@@ -165,34 +162,35 @@ body {
     }
   }
 
-
   .my-shows {
     img {
       width: 100%;
       height: auto;
       @media (min-width: 940px) {
-        height: 335px;
+        height: 311px;
       }
     }
     .tile {
-      .image-wrapper {
-        position: relative;
-        .name {
-          position: absolute;
-          bottom: 0;
-          padding: 5px 10px;
-          font-size: 15px;
+      background: none;
+      .wrapper {
+        background: #424242;
+        margin: 10px;
+        padding-bottom: 1px;
+        .image-wrapper {
+          position: relative;
+          .name {
+            position: absolute;
+            bottom: 0;
+            padding: 5px 10px;
+            font-size: 15px;
+          }
+        }
+
+        .checkbox {
+          margin-top: 5px;
+          margin-bottom: 12px;
         }
       }
-      .content-wrapper {
-
-      }
-
-      .checkbox {
-        margin-top: 5px;
-        margin-bottom: 12px;
-      }
-      margin-right: 20px;
     }
   }
 
@@ -216,7 +214,7 @@ body {
 
   .season-wrapper {
     .show-wrapper {
-      .checkbox-name{
+      .checkbox-name {
         float: left;
         margin-right: 15px;
       }
@@ -375,7 +373,7 @@ body {
   width: 100%;
 }
 
-body{
+body {
 
   .bg-wrapper {
     height: 100%;
