--- a/views/myshows.html
+++ b/views/myshows.html
@@ -1,17 +1,19 @@
 <div class="shows container tiles my-shows">
 
     <div class="col-md-3 wrapper tile" ng-repeat="show in shows">
-        <div class="image-wrapper">
-            <a href="#show/{{ show.ImdbID }}"><p class="name">{{ show.Name }}</p></a>
-            <img ng-src="{{show.ShowImage}}"/>
-        </div>
-        <div class="content-wrapper">
-            <p class="rating"> Rating: {{show.Rating}}</p>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" ng-click="showCheck(show.ShowId)" ng-checked="true">
-            </label>
+        <div class="wrapper">
+            <div class="image-wrapper">
+                <a href="#show/{{ show.ImdbID }}"><p class="name">{{ show.Name }}</p></a>
+                <img ng-src="{{show.ShowImage}}"/>
+            </div>
+            <div class="content-wrapper">
+                <p class="rating"> Rating: {{show.Rating}}</p>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox" ng-click="showCheck(show.ShowId)" ng-checked="true">
+                </label>
+            </div>
         </div>
     </div>
 </div>
