--- a/views/forms/editshow.html
+++ b/views/forms/editshow.html
@@ -23,6 +23,12 @@
             </div>
         </div>
         <div class="form-group row">
+            <label for="showImage" class="col-md-3 control-label">Show Image</label>
+            <div class="col-md-8">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image">
+            </div>
+        </div>
+        <div class="form-group row">
             <label for="rating" class="col-md-3 control-label">Rating</label>
 
             <div class="col-md-8">
