--- a/views/forms/show.html
+++ b/views/forms/show.html
@@ -6,32 +6,32 @@
             <label for="showName" class="col-md-3 control-label">Show name</label>
 
             <div class="col-md-8">
-                <input type="text" data-ng-model="show.Name" class="form-control" id="showName" name="test" placeholder="Show name">
+                <input type="text" data-ng-model="show.Name" class="form-control" id="showName" name="test" placeholder="Show name" ng-required="true">
             </div>
         </div>
         <div class="form-group row">
             <label for="showDescription" class="col-md-3 control-label">Show description</label>
             <div class="col-md-8">
-                <textarea class="form-control" data-ng-model="show.Description" rows="3" id="showDescription"></textarea>
+                <textarea class="form-control" data-ng-model="show.Description" rows="3" id="showDescription" ng-required="true"></textarea>
             </div>
         </div>
         <div class="form-group row">
             <label for="showImdbId" class="col-md-3 control-label">Show Imdb id</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id">
+                <input type="text" class="form-control" data-ng-model="show.ImdbID" id="showImdbId" placeholder="Imdb id" ng-required="true">
             </div>
         </div>
         <div class="form-group row">
             <label for="showImage" class="col-md-3 control-label">Show Image</label>
             <div class="col-md-8">
-                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image">
+                <input type="text" class="form-control" data-ng-model="show.ShowImage" id="showImage" placeholder="Show image" ng-required="true">
             </div>
         </div>
         <div class="form-group row">
             <label for="rating" class="col-md-3 control-label">Rating</label>
 
             <div class="col-md-8">
-                <input type="number" step="0.1" class="form-control" data-ng-model="show.Rating" id="rating" placeholder="Rating">
+                <input type="number" step="0.1" class="form-control" data-ng-model="show.Rating" id="rating" placeholder="Rating" ng-required="true">
             </div>
         </div>
         <div class="form-group">
