--- a/css/less/style.less
+++ b/css/less/style.less
@@ -301,6 +301,34 @@ body {
       }
     }
   }
+
+  .search-trakt-wrapper {
+    .results {
+      .result {
+
+        .image-wrapper {
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+    }
+  }
+
+  .search-wrapper {
+    .results {
+      .result {
+
+        .image-wrapper {
+          img {
+            width: 100%;
+            height: auto;
+          }
+        }
+      }
+    }
+  }
 }
 
 .shows-data {
@@ -397,4 +425,8 @@ body {
   &.welcome {
     overflow: hidden;
   }
+}
+
+.upcoming {
+  background: red;
 }
