--- a/views/episode.html
+++ b/views/episode.html
@@ -10,7 +10,7 @@
         <p> Episode: {{episode.EpisodeNr }}</p>
         <p>Rating: {{episode.Rating}}</p>
         <p>IMDB : {{episode.ShowImdbId}}</p>
-        <p>Date : {{episode.Date | date:'yyyy-MM-dd'}}</p>
+        <p>Date : {{episode.Date | date:'dd/MM/yyyy'}}</p>
         <p> Description: {{episode.Description}}</p>
     </div>
     <div class="bottom-menu">
