--- a/css/style.css
+++ b/css/style.css
@@ -252,6 +252,14 @@ body .background .background-wrapper .lower {
   margin: -32px 0px 0px -14px;
   width: 105%;
 }
+body .search-trakt-wrapper .results .result .image-wrapper img {
+  width: 100%;
+  height: auto;
+}
+body .search-wrapper .results .result .image-wrapper img {
+  width: 100%;
+  height: auto;
+}
 .shows-data img {
   width: 100%;
   height: auto;
@@ -327,4 +335,7 @@ body.log-in .bg-wrapper {
 }
 body.welcome {
   overflow: hidden;
+}
+.upcoming {
+  background: red;
 }
