update + added comments to controller.js

--- a/css/less/style.less
+++ b/css/less/style.less
@@ -90,6 +90,8 @@ body {
   }
   .show-wrapper {
     .show {
+      margin-top: 20px;
+
       .img-wrapper {
         img {
           width: 200px;
@@ -225,7 +227,6 @@ body {
           font-size: 35px;
         }
       }
-
       .season {
         font-size: 25px;
       }
@@ -241,6 +242,9 @@ body {
         margin: 0 10px;
         background: #424242;
         .image-wrapper {
+          img {
+            height: 180px;
+          }
           position: relative;
           .name {
             position: absolute;
@@ -332,6 +336,7 @@ body {
 }
 
 .shows-data {
+  margin-top: 20px;
   img {
     width: 100%;
     height: auto;
