--- a/views/search.html
+++ b/views/search.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="noresults col-md-12">
-                <p ng-hide="tshows.length" ng-if="searchText">This show is not yet imported. Import it using import tool
+                <p ng-hide="tshows.length">This show is not yet imported. Import it using import tool
                     <a href="#traktsearch">here</a></p>
             </div>
         </div>
