--- a/css/less/style.less
+++ b/css/less/style.less
@@ -309,7 +309,7 @@ body {
   .search-trakt-wrapper {
     .results {
       .result {
-
+        margin-top: 20px;
         .image-wrapper {
           img {
             width: 100%;
