--- a/views/log-in.html
+++ b/views/log-in.html
@@ -1,3 +1,4 @@
+<img class="log-in-bg" src="files/image/bb.jpg">
 <div class="container login">
     <div class="login-wrapper col-md-2 col-md-offset-5">
         <h1>Log In !</h1>
