--- a/views/myshows.html
+++ b/views/myshows.html
@@ -11,7 +11,9 @@
             </div>
             <div class="checkbox">
                 <label>
-                    <input type="checkbox" ng-click="showCheck(show.ShowId)" ng-checked="true">
+                    <label class="red">
+                        <i class="mdi-action-favorite" ng-click="showCheck(show.ShowId)"></i>
+                    </label>
                 </label>
             </div>
         </div>
