--- a/views/welcome.html
+++ b/views/welcome.html
@@ -1,11 +1,5 @@
-<div class="background">
-    <div class="background-wrapper">
-        <div class="upper">
-        </div>
-        <div class="lower">
-        </div>
-    </div>
-</div>
+
+<img  class="welcome-bg-wrapper" src="files/image/background-collage-blur.jpg">
 <div class="container welcome">
     <div class="welcome-wrapper">
         <h1>Welcome to SimpleShow !</h1>
